--- a/package.json
+++ b/package.json
@@ -33,19 +33,20 @@
     "redux-thunk": "^2.2.0",
     "reselect": "^3.0.1",
     "supercluster": "^7.1.0",
-    "video-react": "^0.13.1"
+    "video-react": "^0.13.1",
+    "yargs-parser": "^20.2.7"
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
-    "ava": "1.0.0-beta.8",
+    "ava": "^3.15.0",
     "babel-loader": "^8.0.4",
     "css-loader": "^1.0.0",
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.4",
-    "mocha": "^5.2.0",
+    "mocha": "^8.4.0",
     "node-sass": "4.13.1",
     "redux-devtools": "^3.4.0",
     "sass-loader": "^7.1.0",
